@@ -11,6 +11,9 @@
  - always finalize handlers even if processing failed (LP: #1203368)
  - support merging into cloud-config via jsonp. (LP: #1200476)
  - add datasource 'SmartOS' for Joyent Cloud.  Adds a dependency on serial.
+ - add 'log_time' helper to util for timing how long things take
+   which also reads from uptime. uptime is useful as clock may change during
+   boot due to ntp.
 0.7.2:
  - add a debian watch file
  - add 'sudo' entry to ubuntu's default user (LP: #1080717)
